--- a/MomoTetrix.html
+++ b/MomoTetrix.html
@@ -133,7 +133,7 @@
   </head>
   <body>
     <div style="text-align: right;"><a href="https://github.com/JustinSDK/MomoTetrix">GitHub</a></div>
-    Momo Tetrix - Use Up, Down, Left and Right to play. <br>
+    Momo Tetrix - Use Up, Down, Left, Right and Space to play. <br>
     <br>
     <canvas id="stackarea" style="border-style: solid; border-width: 1px; float: left;"></canvas> <canvas
       id="tetrixbox" style="border-style: solid; border-width: 1px; margin-left: 10px; padding-top: 5px; padding-left: 5px;"></canvas><br>
