--- a/MomoTetrix.html
+++ b/MomoTetrix.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Momo Tetrix</title>
     <script type="text/javascript" src="js/tetrix.js"></script>
     <script type="text/javascript">
             window.onload = function() {
