--- a/TextGroundDemo.html
+++ b/TextGroundDemo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta content="text/html; charset=Big5" http-equiv="content-type">
+        <meta charset="UTF-8">
         <script type="text/javascript" src="js/tetrix.js"></script>
         <script type="text/javascript">
             window.onload = function() {        
