--- a/TetrixPieceDemo.html
+++ b/TetrixPieceDemo.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <script type="text/javascript" src="js/tetrix.js"></script>
+        <script type="text/javascript" src="js/tetrix_model.js"></script>
+        <script type="text/javascript" src="js/tetrix_gui.js"></script>
         <script type="text/javascript">
             window.onload = function() {
                 var tetrixBox = new TetrixBox(4, 4, 25, 25);
