--- a/TetrixPieceDemo.html
+++ b/TetrixPieceDemo.html
@@ -15,7 +15,7 @@
                 }
         
                 tetrixBox.setTetrixImages(images);
-                tetrixBox.setBackgroundColor(new Color(255, 255, 255));
+                tetrixBox.setBackgroundColor(new RGB(255, 255, 255));
                 tetrixBox.setBlockBorder(false);
                 
                 var canvas1 = document.getElementById('canvas1');
