--- a/TetrixPieceDemo.html
+++ b/TetrixPieceDemo.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <script type="text/javascript" src="js/tetrix_model.js"></script>
-        <script type="text/javascript" src="js/tetrix_gui.js"></script>
+        <script type="text/javascript" src="js/tetrix_view.js"></script>
         <script type="text/javascript">
             window.onload = function() {
                 var tetrixBox = new TetrixBox(4, 4, 25, 25);
