--- a/TextGroundDemo.html
+++ b/TextGroundDemo.html
@@ -6,7 +6,7 @@
         <script type="text/javascript" src="js/tetrix_view.js"></script>
         <script type="text/javascript">
             window.onload = function() {        
-                var tetrixBox = new TetrixBox(4, 4, 25, 25);
+                var tetrixBox = new TetrixBox();
         
                 var images = [];
                 for(var i = 0; i < 7; i++) {
