--- a/TextGroundDemo.html
+++ b/TextGroundDemo.html
@@ -11,7 +11,6 @@
         <script type="text/javascript">
             const blockWidth = 25;
             const boxWidth = 100;
-            const boxHeight = 100;
             const groundBlocksX = 10;
             const groundBlocksY = 20;
 
@@ -23,7 +22,7 @@
 
             let canvas = document.createElement('canvas');
             canvas.width = boxWidth;
-            canvas.height = boxHeight;        
+            canvas.height = boxWidth;        
             var tetrixBox = new TetrixBox(images, canvas);
             tetrixBox.backgroundColor = rgb(0, 0, 0);
     
