--- a/MomoTetrix.html
+++ b/MomoTetrix.html
@@ -4,7 +4,7 @@
     <title>Momo Tetrix</title>
 
     <script type="text/javascript" src="js/tetrix_model.js"></script>
-    <script type="text/javascript" src="js/tetrix_view.js"></script>
+    <script type="text/javascript" src="js/tetrix_drawing.js"></script>
     <script type="text/javascript">
             window.onload = function() {
                 const blockWidth = 25;
