--- a/TetrixPieceDemo.html
+++ b/TetrixPieceDemo.html
@@ -7,7 +7,7 @@
         <canvas id="canvas"></canvas>
 
         <script type="text/javascript" src="js/tetrix_model.js"></script>
-        <script type="text/javascript" src="js/tetrix_view.js"></script>
+        <script type="text/javascript" src="js/tetrix_drawing.js"></script>
         <script type="text/javascript">
             let images = [];
             for(let i = 0; i < 7; i++) {
