--- a/TextGroundDemo.html
+++ b/TextGroundDemo.html
@@ -7,7 +7,7 @@
         <canvas id="canvas" style="border-width: 1px; border-style: solid;"></canvas>
 
         <script type="text/javascript" src="js/tetrix_model.js"></script>
-        <script type="text/javascript" src="js/tetrix_view.js"></script>
+        <script type="text/javascript" src="js/tetrix_drawing.js"></script>
         <script type="text/javascript">
             const blockWidth = 25;
             const boxWidth = 100;
